# Playwright-Testing

./: main.py  pyproject.toml  report.html  requirements.txt
features/: orderTransaction.feature
jenkins-docker/: Dockerfile  docker-compose.yml
pageObjects/: dashboard.py  login.py  ordersDetails.py  ordersHistory.py
playwright/: conftest.py  requirements.txt  test_UIValidation01.py  test_framework_web_api.py  test_moreValidation.py  test_network01.py  test_network02.py  test_playwrightBasics.py  test_pytest-bdd.py  test_web_api.py
playwright/data/: credentials.json
playwright/utils/: apiBase.py  apiBaseFramework.py
